5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1621_2932.log
== TEST (2019-04-01 18:22:11) 
-- CODE:
input=rep
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input=
-- ERROR:
File "XXXX", line 5
    input=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:22:14) 
-- CODE:
input=rep
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input=
-- EXECUTION TIME:
0.179912
-- ERROR:
  File "/home/codebench/codes/1621/2932/main.py", line 5
    input=
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:13) 
-- CODE:
input=rep
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:38) 
-- CODE:
input=rep
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:38) 
-- CODE:
input=rep
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:28:40) 
-- CODE:
input=rep
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- EXECUTION TIME:
0.14504
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2932/main.py", line 1, in <module>
    input=rep
NameError: name 'rep' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:43) 
-- CODE:
input=rep
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:28:43) 
-- CODE:
input=rep
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- EXECUTION TIME:
0.194167
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2932/main.py", line 1, in <module>
    input=rep
NameError: name 'rep' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:44) 
-- CODE:
input=rep
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:44) 
-- CODE:
input=rep
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:45) 
-- CODE:
input=rep
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:16) 
-- CODE:
input=rep
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:17) 
-- CODE:
input=rep
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:45) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:54:47) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- EXECUTION TIME:
0.197735
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2932/main.py", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:47) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:47) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:48) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:48) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:48) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:54:48) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- EXECUTION TIME:
0.181341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2932/main.py", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:54:48) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- EXECUTION TIME:
0.265756
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2932/main.py", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:49) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:49) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:49) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:50) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:50) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:50) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:50) 
-- CODE:
input=rep*(1,2,3)
rep1=float(input("valor 1:"))
rep2=float(input("valor 2:"))
rep3=float(input("valor 3:"))
input= int("rep1*rep2*rep3:")
input= int//(rep1*rep2+rep2*rep3+rep1*rep3)
input=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=rep*(1,2,3)
NameError: name 'rep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
